added extended workflow

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -162,14 +162,29 @@ booktitle = {http://www.bioinformatics.babraham.ac.uk/projects/fastqc/}
 }
 
 @article{Ensembl:2018,
-author = {Zerbino, Daniel R and Achuthan, Premanand and Akanni, Wasiu and Amode, M Ridwan and Barrell, Daniel and Bhai, Jyothish and Billis, Konstantinos and Cummins, Carla and Gall, Astrid and Girón, Carlos García and Gil, Laurent and Gordon, Leo and Haggerty, Leanne and Haskell, Erin and Hourlier, Thibaut and Izuogu, Osagie G and Janacek, Sophie H and Juettemann, Thomas and To, Jimmy Kiang and Laird, Matthew R and Lavidas, Ilias and Liu, Zhicheng and Loveland, Jane E and Maurel, Thomas and McLaren, William and Moore, Benjamin and Mudge, Jonathan and Murphy, Daniel N and Newman, Victoria and Nuhn, Michael and Ogeh, Denye and Ong, Chuang Kee and Parker, Anne and Patricio, Mateus and Riat, Harpreet Singh and Schuilenburg, Helen and Sheppard, Dan and Sparrow, Helen and Taylor, Kieron and Thormann, Anja and Vullo, Alessandro and Walts, Brandon and Zadissa, Amonida and Frankish, Adam and Hunt, Sarah E and Kostadima, Myrto and Langridge, Nicholas and Martin, Fergal J and Muffato, Matthieu and Perry, Emily and Ruffier, Magali and Staines, Dan M and Trevanion, Stephen J and Aken, Bronwen L and Cunningham, Fiona and Yates, Andrew and Flicek, Paul},
-title = {Ensembl 2018},
-journal = {Nucleic Acids Research},
-volume = {46},
-number = {D1},
-pages = {D754-D761},
-year = {2018},
-doi = {10.1093/nar/gkx1098},
-URL = {http://dx.doi.org/10.1093/nar/gkx1098},
-eprint = {/oup/backfile/content_public/journal/nar/46/d1/10.1093_nar_gkx1098/2/gkx1098.pdf}
+    author = {Zerbino, Daniel R and Achuthan, Premanand and Akanni, Wasiu and Amode, M Ridwan and Barrell, Daniel and Bhai, Jyothish and Billis, Konstantinos and Cummins, Carla and Gall, Astrid and Girón, Carlos García and Gil, Laurent and Gordon, Leo and Haggerty, Leanne and Haskell, Erin and Hourlier, Thibaut and Izuogu, Osagie G and Janacek, Sophie H and Juettemann, Thomas and To, Jimmy Kiang and Laird, Matthew R and Lavidas, Ilias and Liu, Zhicheng and Loveland, Jane E and Maurel, Thomas and McLaren, William and Moore, Benjamin and Mudge, Jonathan and Murphy, Daniel N and Newman, Victoria and Nuhn, Michael and Ogeh, Denye and Ong, Chuang Kee and Parker, Anne and Patricio, Mateus and Riat, Harpreet Singh and Schuilenburg, Helen and Sheppard, Dan and Sparrow, Helen and Taylor, Kieron and Thormann, Anja and Vullo, Alessandro and Walts, Brandon and Zadissa, Amonida and Frankish, Adam and Hunt, Sarah E and Kostadima, Myrto and Langridge, Nicholas and Martin, Fergal J and Muffato, Matthieu and Perry, Emily and Ruffier, Magali and Staines, Dan M and Trevanion, Stephen J and Aken, Bronwen L and Cunningham, Fiona and Yates, Andrew and Flicek, Paul},
+    title = {Ensembl 2018},
+    journal = {Nucleic Acids Research},
+    volume = {46},
+    number = {D1},
+    pages = {D754-D761},
+    year = {2018},
+    doi = {10.1093/nar/gkx1098},
+    URL = {http://dx.doi.org/10.1093/nar/gkx1098},
+    eprint = {/oup/backfile/content_public/journal/nar/46/d1/10.1093_nar_gkx1098/2/gkx1098.pdf}
+}
+
+@article{salmonellaenterica,
+    author = {Potts, Anastasia H. AND Guo, Yinping AND Ahmer, Brian M. M. AND Romeo, Tony},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Role of CsrA in stress responses and metabolism important for Salmonella virulence revealed by integrated transcriptomics},
+    year = {2019},
+    month = {01},
+    volume = {14},
+    url = {https://doi.org/10.1371/journal.pone.0211430},
+    pages = {1-30},
+    abstract = {To cause infection, Salmonella must survive and replicate in host niches that present dramatically different environmental conditions. This requires a flexible metabolism and physiology, responsive to conditions of the local milieu. The sequence specific RNA binding protein CsrA serves as a global regulator that governs gene expression required for pathogenicity, metabolism, biofilm formation, and motility in response to nutritional conditions. Its activity is determined by two noncoding small RNAs (sRNA), CsrB and CsrC, which sequester and antagonize this protein. Here, we used ribosome profiling and RNA-seq analysis to comprehensively examine the effects of CsrA on mRNA occupancy with ribosomes, a measure of translation, transcript stability, and the steady state levels of transcripts under in vitro SPI-1 inducing conditions, to simulate growth in the intestinal lumen, and under in vitro SPI-2-inducing conditions, to simulate growth in the Salmonella containing vacuole (SCV) of the macrophage. Our findings uncovered new roles for CsrA in controlling the expression of structural and regulatory genes involved in stress responses, metabolism, and virulence systems required for infection. We observed substantial variation in the CsrA regulon under the two growth conditions. In addition, CsrB/C sRNA levels were greatly reduced under the simulated intracellular conditions and were responsive to nutritional factors that distinguish the intracellular and luminal environments. Altogether, our results reveal CsrA to be a flexible regulator, which is inferred to be intimately involved in maintaining the distinct gene expression patterns associated with growth in the intestine and the macrophage.},
+    number = {1},
+    doi = {10.1371/journal.pone.0211430}
 }
