--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 -*-change-log-*-
+1.8.0 Rick Gelhausen <gelhausr@informatik.uni-freiburg.de> 17. April 2024
+	* Updated to version 1.8.0
 
 1.5.1 Rick Gelhausen <gelhausr@informatik.uni-freiburg.de> 20. August 2021
         * restructured repository
